# NTW_ModManager

./: README.md  meson.build  run_tests.sh  test_meson.build
data/: com.github.bcedu.ntw3_hb_setup.appdata.xml.in  com.github.bcedu.ntw3_hb_setup.desktop.in  com.github.bcedu.ntw3_hb_setup.gschema.xml  com.github.bcedu.tw.modmanager.appdata.xml.in  com.github.bcedu.tw.modmanager.desktop.in  com.github.bcedu.tw.modmanager.gschema.xml  meson.build
data/resources/: com.github.bcedu.ntw3_hb_setup.gresource.xml  com.github.bcedu.tw.modmanager.gresource.xml
debian/: changelog  control  copyright
po/: POTFILES  meson.build
src/: ModManager.vala  Window.vala  meson.build
src/configs/: Constants.vala  Settings.vala
src/controllers/: AppController.vala  ViewController.vala
src/views/: View1.vala  View2.vala  ViewConf.vala
tests/: ntw3_hb_setup_tests.vala  test.vala
tests/fixtures/Napoleon Total War_GUI_TESTS/data/: this_is_a_mod.pack  this_is_a_mod_2.pack  this_is_a_mod_3.pack  this_is_a_mod_5.pack  this_is_a_mod_6.pack  this_is_a_mod_7.pack  this_is_a_mod_8.pack  this_is_a_mod_9.pack  this_is_a_mod_9_(còpia).pack
tests/fixtures/scripts/: preferences.script.txt  user.script.txt
